Code cleanup for 'java.awt'; add braces, remove compiler warnings, add documentation, etc
git-svn-id: https://svn.apache.org/repos/asf/incubator/harmony/enhanced/classlib/trunk@441863 13f79535-47bb-0310-9956-ffa450edef68